# Langchain-and-tools

./: .env.sample  README.md  pyproject.toml  requirements.txt
data/: blackhole.txt  gov_services.csv
document_loader/: csv_loader.py  directory_loader.py  pdf_loader.py  text_loader.py  web_base_loader.py
rag/: rag_using_langchain.ipynb
retriver/: langchain_retrievers.ipynb
runnables/: runnable_branch.py  runnable_lambda.py  runnable_parallel.py  runnable_passthrough.py  runnable_sequence.py
text_splitting/: document_based.py  length_based.py  text_strucutre_based.py
tools/: currency_conversion_tool.py  toolkits.py
vector_stores/: langchain_chroma.ipynb
